name:                mw-pather
version:             0.1.0.0
synopsis:            RLP's Morrowind Travel Path Finder
description:         Please see README.md
homepage:            https://github.com/rlpowell/mw_pather
license:             MIT
-- license-file:        LICENSE
author:              Robin Lee Powell
maintainer:          rlpowell@digitalkingdom.org
copyright:           2016 Robin Lee Powell
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable mw_pather
  main-is:          mw_pather.hs
  hs-source-dirs:   .
  build-depends:    base == 4.*
                  , haste-compiler == 0.5.5.1
                  , tagsoup
                  , HTTP
                  , containers
                  , MissingH
                  -- , directory < 1.3
                  -- , process < 1.3

-- library
--   hs-source-dirs:      lib
--   exposed-modules:     HBlog.Lib
--                      , Text.Pandoc.Readers.TikiWiki
--                      , Text.Pandoc.Parsing
--                      , Text.Pandoc.Asciify
--   build-depends:       base >= 4.7 && < 5
--                      , pcre-light
--                      , pcre-heavy
--                      , template-haskell
--                      , pandoc
--                      , pandoc-types
--                      , parsec
--                      , network-uri
--                      , containers
--                      , texmath
--                      , tagsoup
--                      , mtl
--                      , data-default
--   ghc-options:      -Wall
--   default-language:    Haskell2010
-- 
-- executable hblog
--   main-is:          hblog.hs
--   hs-source-dirs:   app
--   build-depends:    base == 4.*
--                   , hakyll == 4.9.*
--                   , pcre-heavy
--                   , filepath
--                   , unix
--                   , blaze-html
--                   , containers
--                   , string-conversions
--                   , pandoc-types
--                   , network-uri
--                   , pandoc
--                   , directory
--                   , time
--                   , process
--                   , transformers
--                   , time-locale-compat
--   ghc-options:      -threaded -Wall
--   default-language: Haskell2010
-- 
-- executable tiki_to_md
--   main-is:          tiki_to_md.hs
--   hs-source-dirs:   app
--   build-depends:    base == 4.*
--                   , filepath
--                   , pandoc
--                   , pandoc-types
--                   , hblog
--                   , filemanip
--                   , directory
--                   , text
--   ghc-options:      -threaded -Wall
--   default-language: Haskell2010
-- 
-- executable unphone
--   main-is:          unphone.hs
--   hs-source-dirs:   app
--   build-depends:    base == 4.*
--                   , directory
--                   , filepath
--                   , unix
--                   , pcre-heavy
--                   , pcre-light
--                   , filemanip
--                   , hblog
--   ghc-options:      -threaded -Wall
--   default-language: Haskell2010
-- 
-- executable rectifier
--   main-is:          rectifier.hs
--   hs-source-dirs:   app
--   build-depends:    base == 4.*
--                   , directory
--                   , filepath
--                   , unix
--                   , filemanip
--                   , pandoc
--                   , pandoc-types
--                   , network-uri
--                   , pcre-heavy
--                   , pcre-light
--                   , bytestring
--                   , edit-distance
--                   , text
--   ghc-options:      -threaded -Wall
--   default-language: Haskell2010
-- 
-- test-suite hblog-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , hspec
--                      , QuickCheck
--                      , process
--                      , directory
--                      , transformers
--                      , yaml
--                      , filepath
--                      , unix
--   ghc-options:         -threaded -Wall
--   default-language:    Haskell2010
-- 
-- source-repository head
--   type:     git
--   location: https://github.com/rlpowell/hblog
