name:                mw-pather
version:             0.1.0.0
synopsis:            RLP's Morrowind Travel Path Finder
description:         Please see README.md
homepage:            https://github.com/rlpowell/mw_pather
license:             MIT
author:              Robin Lee Powell
maintainer:          rlpowell@digitalkingdom.org
copyright:           2016 Robin Lee Powell
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable mw-pather
  main-is:          mw_pather.hs
  hs-source-dirs:   .
  build-depends:    base == 4.*
                  , haste-compiler == 0.5.5.1
                  , tagsoup
                  , containers
                  , MissingH
                  , http-conduit
                  , bytestring
